-*- text -*-

munin (1.3.3, r910-r1236)

  It's very likely that the entries for 1.3.3 contain some duplicates.
  In part because it's been going on for more than a year, in part
  because a large part has been constructed from the svn commit log.

  * Linux plugins: Use @@GOODSH@@ (posix-shell) there too
  * linux/vlan: Better autoconf messages
  * Solaris plugins: bring them @@GOODSH@@ and some elementary civilization
  * sunos memory: Make autoconf'able
  * Bring the goodness og @@GOODSH@@ to the generic plugins
  * node.d/df and df_inode plugins: Rewrite like the last 20 years of shell
	enhancments happened
  * munin monitoring plugins: Make them auto-installing
  * ntp_ and ntp_states plugins: Insert graph_category, make them "auto"
	 and invent category "time" as well
  * ntp_kernel_* plugins: Not ntpdc's were created equal, autodetect better
  * munin-cgi-graph: Patch to limit number of concurrent rrdgraph processes
  * munin-html: Do not generate height/width attributes when in cgi mode
  * munin-html: Log runtime - like with munin-graph etc.
  * users plugin: Make vehicle for *STACK draw types
  * munin-graph: Support draw types AREASTACK and LINESTACK which is not
	sensitive to order like LINE/STACK and AREA/STACK
  * INSTALL: Document what to do first when working with a svn checkout
  * munin-graph: Simplify colour processing
  * Makefile: Remove build before rebuilding it
  * users plugin: Further fixing. Make testbed for field.colour and
	graph_printf
  * munin-graph/Munin.pm: Support graph_printf
  * users plugin: Move to platform independent directory
  * users plugin: change familiy to auto, make generic
  * linux/memory: Further adjustments w.r.t. correct handling of vmalloc_used
  * Fix typo "contigious"
  * munin-node-simple: Fix @@ variable typos
  * SunOS df plugins: use @@GOODSH@@
  * Define GOODSH and BASH in Makefile.config to be used by shell plugins
  * exim_* plugins: Problems with "which exim" on Solaris corrected